[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/Autoload/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Collisions/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Collisions/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Enemy/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/Action RPG Resources/Shadows/LargeShadow.png" type="Texture" id=6]
[ext_resource path="res://src/Collisions/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Enemy/WanderController.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=7]
resource_name = "Hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.796078, 0.262745, 0.262745, 1 ), Color( 0.545098, 0.12549, 0.12549, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 32
collision_mask = 2147483649
script = ExtResource( 1 )
acceleration = 300
max_speed = 1000

[node name="Sprite" type="Sprite" parent="."]
hframes = 12

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 128

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.117647, 0.580392, 0.286275, 0.52549 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 7 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetection"]

[editable path="WanderController"]
